--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,23 @@
 # Run this command to generate a a new NEXTAUTH_SECRET
 # $ openssl rand -base64 32
 
-AUTH_URL = http://localhost:3000
-AUTH_SECRET=
+# Authentication
+# Run this command to generate a new AUTH_SECRET:
+# $ openssl rand -base64 32
+AUTH_URL=http://localhost:3000
+AUTH_SECRET=your_auth_secret_here
+
+# Firebase Configuration
+# Get these values from your Firebase Console -> Project Settings
+NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
+
+# Firebase Admin SDK Configuration
+# Get these from your service account key JSON file
+FIREBASE_PROJECT_ID=your_project_id
+FIREBASE_CLIENT_EMAIL=your_client_email@your_project_id.iam.gserviceaccount.com
+FIREBASE_PRIVATE_KEY="your_private_key_here"  # Keep the quotes!
