--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,17 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Backup files
+*.bak
+
+# Tools
+firebase-tools.ps1
+
+# Firebase
+/config/serviceAccountKey.json
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
