--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@firebase/firestore": "^4.7.5",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -48,17 +49,22 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "^8.10.7",
-    "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
+    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
+    "express": "^4.21.1",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^12.7.0",
+    "google-auth-library": "^9.15.0",
     "lucide-react": "^0.447.0",
     "match-sorter": "^6.3.4",
     "next": "^14.2.16",
@@ -66,6 +72,7 @@
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.12",
     "nuqs": "^1.19.1",
+    "pg": "^8.13.1",
     "postcss": "8.4.28",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
@@ -75,14 +82,15 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-responsive": "^10.0.0",
     "recharts": "^2.12.7",
+    "sequelize": "^6.37.5",
     "sharp": "^0.32.5",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "sort-by": "^1.2.0",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
     "uuid": "^9.0.1",
     "vaul": "^1.1.1",
     "whatsapp-web.js": "^1.26.0",
@@ -91,12 +99,15 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
+    "@types/node": "^22.10.1",
     "@types/sort-by": "^1.2.3",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.14"
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
