feat: improve security by updating gitignore and env example

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,17 @@
 # Run this command to generate a a new NEXTAUTH_SECRET
 # $ openssl rand -base64 32
 
-AUTH_URL = http://localhost:3000
-AUTH_SECRET=
+# Authentication
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your_nextauth_secret_here
+AUTH_URL=http://localhost:3000
+AUTH_SECRET=your_auth_secret_here
+
+# Firebase Configuration
+NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_auth_domain_here
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id_here
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id_here
+NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id_here
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id_here
