--- a/package.json
+++ b/package.json
@@ -51,18 +51,23 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-simple-maps": "^3.0.6",
     "autoprefixer": "10.4.15",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
+    "firebase": "^11.0.2",
+    "framer-motion": "^11.12.0",
+    "google-auth-library": "^9.15.0",
     "lucide-react": "^0.447.0",
     "match-sorter": "^6.3.4",
-    "next": "^14.2.16",
-    "next-auth": "^5.0.0-beta.18",
+    "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.12",
     "nuqs": "^1.19.1",
@@ -74,7 +79,8 @@
     "react-hook-form": "^7.47.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-responsive": "^10.0.0",
-    "recharts": "^2.12.7",
+    "react-simple-maps": "^3.0.0",
+    "recharts": "^2.14.1",
     "sharp": "^0.32.5",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
